err/falsy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/falcon'...
Listing './lib/python3.5/site-packages/falcon/bench'...
Listing './lib/python3.5/site-packages/falcon/bench/dj'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/dj'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/hello'...
Listing './lib/python3.5/site-packages/falcon/bench/dj/hello/migrations'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/controllers'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/model'...
Listing './lib/python3.5/site-packages/falcon/bench/nuts/nuts/tests'...
Listing './lib/python3.5/site-packages/falcon/bench/queues'...
Listing './lib/python3.5/site-packages/falcon/cmd'...
Listing './lib/python3.5/site-packages/falcon/media'...
Listing './lib/python3.5/site-packages/falcon/media/validators'...
Listing './lib/python3.5/site-packages/falcon/routing'...
Listing './lib/python3.5/site-packages/falcon/testing'...
Listing './lib/python3.5/site-packages/falcon/util'...
Listing './lib/python3.5/site-packages/falcon-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/falsy'...
Listing './lib/python3.5/site-packages/falsy/jlog'...
Listing './lib/python3.5/site-packages/falsy/loader'...
Listing './lib/python3.5/site-packages/falsy/netboy'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars/drore-document-ui'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars/drore-document-ui/ace'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars/drore-document-ui/bootstrap'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars/drore-document-ui/drore'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars/drore-document-ui/images'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars/drore-document-ui/jquery'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_bootstrap/webjars/drore-document-ui/jsonview'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_impress'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_impress/images'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_impress/lib'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/plugins'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/plugins/after-explorer'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/plugins/before-display'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/plugins/before-explorer'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/plugins/before-load'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/plugins/before-parse'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/scripts'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_material/styles'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_normal'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_normal/css'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_normal/fonts'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_normal/images'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_normal/lang'...
Listing './lib/python3.5/site-packages/falsy/swagger_proxy/vendors/dist_normal/lib'...
Listing './lib/python3.5/site-packages/falsy/termcc'...
Listing './lib/python3.5/site-packages/falsy/utils'...
Listing './lib/python3.5/site-packages/falsy-2017.8.1.dev123.dist-info'...
Listing './lib/python3.5/site-packages/gunicorn'...
Listing './lib/python3.5/site-packages/gunicorn/app'...
Listing './lib/python3.5/site-packages/gunicorn/http'...
Listing './lib/python3.5/site-packages/gunicorn/instrument'...
Listing './lib/python3.5/site-packages/gunicorn/workers'...
Listing './lib/python3.5/site-packages/gunicorn-19.7.1.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
